Initial public release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "@fastly/remix-compute-js",
-  "version": "0.1.0",
+  "name": "remix-fastly-compute-js",
   "license": "MIT",
-  "description": "Remix for Fastly Compute@Edge"
+  "private": true,
+  "description": "Remix for Fastly Compute@Edge",
+  "version": "0.1.5",
+  "workspaces": [
+    "packages/remix-server-runtime",
+    "packages/remix-server-adapter"
+  ],
+  "devDependencies": {
+    "@remix-run/react": "^1.8.0",
+    "@remix-run/server-runtime": "^1.8.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.3"
+  }
 }
