--- a/packages/remix-template/package.json
+++ b/packages/remix-template/package.json
@@ -2,11 +2,13 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "npm run build:remix && npm run build:fastly",
+    "build:remix": "remix build",
+    "build:fastly": "compute-js-static-publish --build-static --suppress-framework-warnings && webpack && js-compute-runtime ./bin/index.js ./bin/main.wasm",
     "deploy": "fastly compute publish",
     "dev:remix": "remix watch",
-    "dev:fastly": "fastly compute serve --watch",
-    "dev": "remix build && run-p \"dev:*\"",
+    "dev:fastly": "fastly compute serve --watch --verbose --watch-dir=build",
+    "dev": "run-p \"dev:*\"",
     "start": "fastly compute serve"
   },
   "dependencies": {
