--- a/packages/remix-template/.gitignore
+++ b/packages/remix-template/.gitignore
@@ -11,4 +11,6 @@ node_modules
 # @fastly/compute-js-static-publish
 /src/statics.js
 /src/statics.d.ts
+/src/statics-metadata.js
+/src/statics-metadata.d.ts
 /src/static-content
