--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "devDependencies": {
     "@remix-run/react": "^1.8.0",
     "@remix-run/server-runtime": "^1.8.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.3"
   }
