--- a/packages/remix-server-runtime/package.json
+++ b/packages/remix-server-runtime/package.json
@@ -13,11 +13,7 @@
   },
   "dependencies": {
     "@fastly/js-compute": "^1.3.4",
-    "@remix-run/server-runtime": "^1.7.5",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "events": "^3.3.0",
-    "stream-browserify": "^3.0.0"
+    "@remix-run/server-runtime": "^1.7.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.9"
