--- a/packages/remix-server-runtime/package.json
+++ b/packages/remix-server-runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastly/remix-server-runtime",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.0",
   "license": "MIT",
   "description": "Remix Runtime for Fastly Compute@Edge",
   "types": "./build/src/index.d.ts",
