--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "packages/remix-server-adapter"
   ],
   "devDependencies": {
-    "@remix-run/react": "^1.17.1-pre.0",
-    "@remix-run/server-runtime": "^1.17.1-pre.0",
+    "@remix-run/react": "^1.17.1",
+    "@remix-run/server-runtime": "^1.17.1",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
