--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "private": true,
   "description": "Remix for Fastly Compute@Edge",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "workspaces": [
     "packages/remix-server-runtime",
     "packages/remix-server-adapter"
