--- a/packages/remix-template/package.json
+++ b/packages/remix-template/package.json
@@ -13,8 +13,8 @@
     "start": "fastly compute serve"
   },
   "dependencies": {
-    "@fastly/remix-server-runtime": "^2.0.2",
-    "@fastly/remix-server-adapter": "^2.0.2",
+    "@fastly/remix-server-runtime": "^3.0.0-beta.0",
+    "@fastly/remix-server-adapter": "^3.0.0-beta.0",
     "@remix-run/react": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
