--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "packages/remix-server-adapter"
   ],
   "devDependencies": {
+    "@fastly/js-compute": "^2.5.0",
     "@remix-run/react": "^1.17.1",
     "@remix-run/server-runtime": "^1.17.1",
     "@types/react": "^18.2.9",
