--- a/packages/remix-server-runtime/package.json
+++ b/packages/remix-server-runtime/package.json
@@ -2,7 +2,7 @@
   "name": "@fastly/remix-server-runtime",
   "version": "2.0.2",
   "license": "MIT",
-  "description": "Remix Runtime for Fastly Compute@Edge",
+  "description": "Remix Runtime for Fastly Compute",
   "types": "./build/src/index.d.ts",
   "main": "./build/src/index.js",
   "exports": {
