--- a/packages/remix-template/package.json
+++ b/packages/remix-template/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@fastly/remix-server-runtime": "^4.0.0-beta.0",
     "@fastly/remix-server-adapter": "^4.0.0-beta.0",
+    "@remix-run/css-bundle": "*",
     "@remix-run/react": "*",
+    "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
