--- a/packages/remix-template/.gitignore
+++ b/packages/remix-template/.gitignore
@@ -8,9 +8,6 @@ node_modules
 # Fastly Compute
 /bin
 /pkg
+
 # @fastly/compute-js-static-publish
-/src/statics.js
-/src/statics.d.ts
-/src/statics-metadata.js
-/src/statics-metadata.d.ts
-/src/static-content
+/static-publisher
