--- a/packages/remix-template/package.json
+++ b/packages/remix-template/package.json
@@ -14,8 +14,8 @@
     "start": "fastly compute serve"
   },
   "dependencies": {
-    "@fastly/remix-server-runtime": "^4.0.0-beta.0",
-    "@fastly/remix-server-adapter": "^4.0.0-beta.0",
+    "@fastly/remix-server-runtime": "^4.0.0",
+    "@fastly/remix-server-adapter": "^4.0.0",
     "@remix-run/css-bundle": "*",
     "@remix-run/react": "*",
     "isbot": "^4.1.0",
