--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "inlineSources": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "newLine": "LF",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
