--- a/packages/remix-server-runtime/package.json
+++ b/packages/remix-server-runtime/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fastly/remix-server-runtime",
   "type": "module",
-  "version": "4.1.0",
+  "version": "5.0.0-alpha.0",
   "license": "MIT",
   "description": "Remix Runtime for Fastly Compute",
   "types": "./build/src/index.d.ts",
